# PaperMind

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: chunker.py  collector.py  config.py  embeddings.py  llm.py  main.py  rag.py  retriever.py  schemas.py  storage.py  vector_store.py
app/api/: __init__.py  dependencies.py  router.py
app/api/routers/: __init__.py  conversations.py  health.py  knowledge.py  papers.py
app/application/: __init__.py  indexing_service.py  paper_service.py  rag_service.py  retrieval_service.py
app/core/: __init__.py  container.py
app/db/: __init__.py  database.py  repositories.py
app/domain/: __init__.py  models.py  ports.py
app/domain/knowledge/: __init__.py  chunking.py
app/infrastructure/: __init__.py
app/infrastructure/ai/: __init__.py  embeddings.py  llm.py
app/infrastructure/arxiv/: __init__.py  collector.py
app/infrastructure/persistence/: __init__.py  database.py  models.py  postgres_repository.py  repositories.py
app/infrastructure/vector/: __init__.py  chroma.py
app/schemas/: __init__.py  conversations.py  knowledge.py  papers.py
docs/: PaperMind-7月底AI应用开发实战文档.md  学习路线.md  阶段1-最小持久化与正式前端实施手册.md  阶段2-专题订阅与增量任务实施手册.md  阶段3-全文解析与RAG评测实施手册.md  阶段4-工程化交付与V1发布实施手册.md  阶段5-研究工作流与Idea卡片实施手册.md
frontend/: __init__.py  app.py
tests/: .gitignore  test_api_routing.py  test_chunker.py  test_collector.py  test_embeddings.py  test_frontend.py  test_health.py  test_rag_mock.py  test_retriever.py  test_storage.py
